NetBSD Problem Report #50927

From www@NetBSD.org  Wed Mar  9 12:38:35 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 032127ABD1
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  9 Mar 2016 12:38:35 +0000 (UTC)
Message-Id: <20160309123834.2F5D37ACC2@mollari.NetBSD.org>
Date: Wed,  9 Mar 2016 12:38:34 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/ic/arn9003.c:2238]: (style) Suspicious condition 
X-Send-Pr-Version: www-1.0

>Number:         50927
>Category:       kern
>Synopsis:       src/sys/dev/ic/arn9003.c:2238]: (style) Suspicious condition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 09 12:40:00 +0000 2016
>Closed-Date:    Wed Mar 09 20:37:24 +0000 2016
>Last-Modified:  Wed Mar 09 20:37:24 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160308
>Organization:
>Environment:
>Description:

src/sys/dev/ic/arn9003.c:2238]: (style) Suspicious condition (assignment + comparison); Clarify expression with parentheses.

Source code is

   if ((iq_corr_neg = cal->iq_corr_meas < 0))

That could be tidier.

Also in the same source code file is

[src/sys/dev/ic/arn9003.c:2872]: (style) Variable 'scale' is assigned a value that is never used.

Suggest either use it or delete it.


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50927 CVS commit: src/sys/dev/ic
Date: Wed, 9 Mar 2016 15:07:05 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Mar  9 20:07:04 UTC 2016

 Modified Files:
 	src/sys/dev/ic: arn9003.c

 Log Message:
 PR/50927: David Binderman: Fix wrong paren


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.8 src/sys/dev/ic/arn9003.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 09 Mar 2016 20:37:24 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.