PR/50927: David Binderman: Fix wrong paren