sys/dev/ic/arn9003.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: arn9003.c,v 1.7 2015/05/24 17:08:50 matt Exp $	*/
+/*	$NetBSD: arn9003.c,v 1.8 2016/03/09 20:07:04 christos Exp $	*/
 /*	$OpenBSD: ar9003.c,v 1.25 2012/10/20 09:53:32 stsp Exp $	*/
 
 /*-
@@ -24,7 +24,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: arn9003.c,v 1.7 2015/05/24 17:08:50 matt Exp $");
+__KERNEL_RCSID(0, "$NetBSD: arn9003.c,v 1.8 2016/03/09 20:07:04 christos Exp $");
 
 #include <sys/param.h>
 #include <sys/sockio.h>
@@ -2235,7 +2235,7 @@ ar9003_calib_iq(struct athn_softc *sc)
 		if (cal->pwr_meas_q == 0)
 			continue;
 
-		if ((iq_corr_neg = cal->iq_corr_meas < 0))
+		if ((iq_corr_neg = cal->iq_corr_meas) < 0)
 			cal->iq_corr_meas = -cal->iq_corr_meas;
 
 		i_coff_denom =
